# zero-to-production-in-rust

./: .env  Cargo.toml  config.yaml
.github/workflows/: rust.yml
scripts/: init_db.sh  install_tools.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
